--- a/index.html
+++ b/index.html
@@ -1,1 +1,387 @@
-<h1>Github pages test</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>foklore</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+</head>
+
+<body>
+
+    <header class="container-fluid">
+        <h2 class="logo">foklore</h2>
+        <p id="autor">Victor Amador</p>
+        <nav></nav>
+    </header>
+
+    <section class="container-fluid" id="home">
+        <img src="media/grass.png" id="grass">
+        <img src="media/trees.png" id="trees">
+        <img src="media/trees1.png" id="trees1">
+        <img src="media/soil.png" id="soil">
+        <img src="media/trees2.png" id="trees2">
+        <img src="media/tree.png" id="tree">
+        <img src="media/taylor.png" id="taylor">
+        <img src="media/soil1.png" id="soil1">
+        <img src="media/tree1.png" id="tree1">
+        <img src="media/tree2.png" id="tree2">
+    </section>
+
+    <section class="container-fluid row" id="sec1">
+        <audio controls>
+            <source src="media/songs/Taylor Swift - the 1.mp3" type="audio/mp3">
+            Tu navegador no soporta audio
+        </audio>
+        <article class="col-sm-6">
+            <img src="media/the1.png" class="imgS" id="the1">
+        </article>
+        <article class="col-sm-6">
+            <h2>the 1</h2>
+            <p>
+                I'm doing good<br>
+                I'm on some new shit<br>
+                Been saying "yes" instead of "no"<br>
+                I thought I saw you at the bus stop<br>
+                I didn't though<br>
+                I hit the ground running each night<br>
+                I hit the Sunday matinée<br>
+                You know the greatest films of all time<br>
+                Were never made<br>
+                I guess you never know, never know<br>
+                And if you wanted me, you really should've showed<br>
+                And if you never bleed, you're never gonna grow<br>
+                And it's alright now<br><br>
+
+                But we were something,<br>
+                Don't you think so?<br>
+                roaring twenties,<br>
+                Tossing pennies in the pool<br>
+                And if my wishes came true<br>
+                It would've been you<br>
+                In my defense<br>
+                I have none<br>
+                For never leaving well enough alone<br>
+                But it would've been fun<br>
+                If you would've been the one<br><br>
+
+                I had this dream<br>
+                You're doing cool shit<br>
+                Having adventures on your own<br>
+                You meet some woman on the internet<br>
+                And take her home<br>
+                We never painted by the numbers, baby<br>
+                But we were making it count<br>
+                You know the greatest loves of all time are over now<br>
+                I guess you never know, never know<br>
+                And it's another day waking up alone<br><br>
+
+                Chorus<br><br>
+
+                I persist and resist the temptation to ask you<br><br>
+
+                If one thing had been different<br>
+                Would everything be different today?<br><br>
+
+                We were something, don't you think so?<br>
+                Rosé flowing<br>
+                With your chosen family<br>
+                And it would've been sweet<br>
+                If it could've been me<br>
+                In my defense I have none<br>
+                For digging up the grave another time<br>
+                But it would've been fun<br>
+                If you would've been the one
+            </p>
+        </article>
+    </section>
+
+    <section class="container-fluid row" id="sec2">
+        <audio controls>
+            <source src="media/songs/Taylor Swift - cardigan.mp3" type="audio/mp3">
+            Tu navegador no soporta audio
+        </audio>
+        <article class="col-sm-6">
+            <h2>cardigan</h2>
+            <p>
+                Vintage tee, brand new phone<br>
+                High heels on cobblestones<br>
+                When you are young, they assume you know nothing<br>
+                Sequin smile, black lipstick<br>
+                Sensual politics<br>
+                When you are young, they assume you know nothing<br><br>
+
+                But I knew you<br>
+                Dancin' in your Levi's<br>
+                Drunk under a streetlight<br>
+                I knew you<br>
+                Hand under my sweatshirt<br>
+                Baby, kiss it better<br>
+                And when I felt like I was an old cardigan under<br>
+                someone's bed<br>
+                You put me on and said I was your favorite<br><br>
+
+                A friend to all is a friend to none<br>
+                Chase two girls, lose the one<br>
+                When you are young, they assume you know nothing<br><br>
+
+                But I knew you<br>
+                Playing hide-and-seek and<br>
+                Giving me your weekends<br>
+                I knew you<br>
+                Your heartbeat on the High Line<br>
+                Once in twenty lifetimes<br>
+                And when I felt like I was an old cardigan under<br>
+                someone's bed<br>
+                You put me on and said I was your favorite<br><br>
+
+                To kiss in cars and downtown bars<br>
+                Was all we needed<br>
+                You drew stars around my scars<br>
+                But now I'm bleeding<br>
+
+                Cause I knew you<br>
+                Stepping on the last train<br>
+                Marked me like a bloodstain<br>
+                I knew you<br>
+                Tried to change the ending<br>
+                Peter loosing Wendy<br>
+                I knew you<br>
+                Leaving like a father<br>
+                Running like water<br>
+                When you are young, they assume you know nothing<br>
+                But I knew you'd linger like a tattoo kiss<br>
+                I knew you'd haunt all of my what-ifs<br>
+                The smell of smoke would hang around this long<br>
+                Cause I knew everything when I was young<br>
+                I knew I'd curse you for the longest time<br>
+                Chasing shadows in the grocery line<br>
+                I knew you'd miss me once the thrill expired<br>
+                And you'd be standin' in my front porch light<br>
+                And I knew you'd come back to me<br>
+                You'd come back to me<br>
+                And you'd come back to me<br>
+                And you'd come back<br><br>
+
+                And when I felt like I was an old cardigan<br>
+                Under someone's bed<br>
+                You put me on and said I was your favorite
+            </p>
+        </article>
+        <article class="col-sm-6">
+            <img src="media/cardigan.png" class="imgS" id="cardigan">
+        </article>
+    </section>
+
+    <section class="container-fluid row" id="sec3">
+        <audio controls>
+            <source src="media/songs/Taylor Swift - the last great american dynasty.mp3" type="audio/mp3">
+            Tu navegador no soporta audio
+        </audio>
+        <article class="col-sm-6">
+            <img src="media/tlgad.png" class="imgS" id="tlgad">
+        </article>
+        <article class="col-sm-6">
+            <h2>the last great american dynasty</h2>
+            <p>
+                Rebekah rode up on the afternoon train<br>
+                It was sunny<br>
+                Her saltbox house on the coast<br>
+                Took her mind off St. Louis<br>
+                Bill was the heir to the Standard Oil name<br>
+                And money<br>
+                And the town said<br>
+                "How did a middle-class divorcée do it?"<br>
+                The wedding was charming<br>
+                If a little gauche<br>
+                There's only so far new money goes<br>
+                They picked out a home and called it "Holiday House"<br>
+                Their parties were tasteful<br>
+                If a little loud<br>
+                The doctor had told him to settle down<br>
+                It must have been her fault his heart gave out<br><br>
+
+                And they said<br>
+                "There goes the last great American dynasty<br>
+                Who knows, if she never showed up<br>
+                what could've been<br>
+                There goes the maddest woman this town has ever seen<br>
+                She had a marvelous time ruinin' everything"<br><br>
+
+                Rebekah gave up on the Rhode Island set<br>
+                Forever<br>
+                Flew in all her Bitch Packin' friends from the city<br>
+                Filled the pool with champagne and swam with the big names and blew<br>
+                through the money on the boys and the ballet<br>
+                And losing on card game bets with Dalí<br><br>
+
+                And they said<br>
+                "There goes the last great American dynasty"<br>
+                Who knows, if she never showed up<br>
+                what could've been<br>
+                There goes the most shameless woman this town has ever seen<br>
+                She had a marvelous time ruinin' everything<br><br>
+
+                They say<br>
+                She was seen on occasion<br>
+                Pacing the rocks, staring out at the midnight sea<br>
+                And in a feud with her neighbor she stole his dog and dyed it key lime green<br>
+                50 years is a long time<br>
+                Holiday House sat quietly on that beach<br>
+                Free of women with madness, their men and bad habits<br>
+                Then it was bought by me<br><br>
+
+                Who knows, if I never showed up, what could've been<br>
+                There goes the loudest woman this town has ever seen<br>
+                I had a marvelous time ruinin' everything<br>
+                I had a marvelous time<br>
+                Ruining everything<br>
+                A marvelous time<br>
+                Ruining everything<br>
+                A marvelous time<br>
+                I had a marvelous time
+            </p>
+        </article>
+    </section>
+
+    <section class="container-fluid row" id="sec6">
+        <audio controls>
+            <source src="media/songs/Taylor Swift - mirrorball.mp3" type="audio/mp3">
+            Tu navegador no soporta audio
+        </audio>
+        <article class="col-sm-6">
+            <h2>mirrorball</h2>
+            <p>
+                I want you to know<br>
+                I'm a mirrorball<br>
+                I'll show you every version of yourself tonight<br>
+                I'll get you out on the floor<br>
+                Shimmering beautiful<br>
+                And when I break it's in a million pieces<br><br>
+
+                Hush<br>
+                When no one is around, my dear<br>
+                You'll find me on my tallest tiptoes<br>
+                Spinning in my highest heels, love<br>
+                Shining just for you<br>
+                Hush<br>
+                I know they said the end is near<br>
+                But I'm still on my tallest tiptoes<br>
+                Spinning in my highest heels, love<br>
+                Shining just for you<br><br>
+
+                I want you to know<br>
+                I'm a mirrorball<br>
+                I can change everything about me to fit in<br>
+                You are not like the regulars<br>
+                The masquerade revelers<br>
+                Drunk as they watch my shattered edges glisten<br><br>
+
+                Chorus<br><br>
+
+                And they called off the circus<br>
+                Burned the disco down<br>
+                When they sent home the horses<br>
+                And the rodeo clowns<br>
+                I'm still on that tightrope<br>
+                I'm still trying everything<br>
+                to get you laughing at me<br>
+                I'm still a believer<br>
+                But I don't know why<br>
+                I've never been a natural<br>
+                All I do is try, try, try<br>
+                I'm still on that trapeze<br>
+                I'm still trying everything<br>
+                To keep you looking at me<br><br>
+
+                Because I'm a mirrorball<br>
+                I'm a mirrorball<br>
+                I'll show you every version of yourself<br>
+                Tonight
+            </p>
+        </article>
+        <article class="col-sm-6">
+            <img src="media/mirrorball.png" id="discoball">
+        </article>
+    </section>
+
+    <section class="container-fluid row" id="sec11">
+        <audio controls>
+            <source src="media/songs/Taylor Swift - invisible string.mp3" type="audio/mp3">
+            Tu navegador no soporta audio
+        </audio>
+        <article class="col-sm-3 is">
+            <img src="media/is1.png" id="is1">
+        </article>
+        <article class="col-sm-3 is">
+            <img src="media/is2.png" id="is2">
+        </article>
+        <article class="col-sm-6">
+            <h2>invisible string</h2>
+            <p>
+                Green was the color of the grass<br>
+                Where I used to read at Centennial Park<br>
+                I used to think I would meet somebody there<br>
+                Teal was the color of your shirt<br>
+                when you were sixteen at the yogurt shop<br>
+                You used to work at to make a little money<br><br>
+
+                Time<br>
+                Curious time<br>
+                Gave me no compasses<br>
+                Gave me no signs<br>
+                Were there clues I didn't see?<br>
+                And isn't it just so pretty to think<br>
+                All along there was some<br>
+                Invisible string<br>
+                Tying you to me<br><br>
+
+                Bad was the blood of the song in the cab on your first trip to LA<br>
+                You ate at my favorite spot for dinner<br>
+                Bold was the waitress on our three year trip getting<br>
+                lunch down by the Lakes<br>
+                She said I looked like an American singer<br><br>
+
+                Time<br>
+                Mystical time<br>
+                Cutting me open, then healing me fine<br>
+                Were there clues I didn't see?<br>
+                And isn't it just so pretty to think<br>
+                All along there was some<br>
+                Invisible string<br>
+                Tying you to me<br><br>
+
+                A string that pulled me out<br>
+                of all the wrong arms<br>
+                right into that dive bar<br>
+                Something wrapped all of my<br>
+                past mistakes in barbed wire<br>
+                Chains around my demons<br>
+                Wool to brave the seasons<br>
+                One single thread of gold tied me to you<br><br>
+
+                Cold was the steel of my axe to grind<br>
+                For the boys who broke my heart<br>
+                Now I send their babies presents<br>
+                Gold was the color of the leaves when I<br>
+                showed you around Centennial Park<br>
+                Hell was the journey but it brought me heaven<br><br>
+
+                Time<br>
+                Wondrous time<br>
+                Gave me the blues and then purple pink skies<br>
+                And it's cool<br>
+                Baby with me<br>
+                And isn't it just so pretty to think<br>
+                All along there was some<br>
+                Invisible string<br>
+                Tying you to me?
+            </p>
+        </article>
+    </section>
+</body>
