--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header class="container-fluid">
         <h2 class="logo">folklore</h2>
-        <p id="autor">Victor Amador</p>
+        <p id="autor">Victor Hugo Amador</p>
         <nav></nav>
     </header>
 
